dataset1235/2025-2/1153765216/users/641768463/executions/3138746197_291286518.log
== RUN (2025-08-21 19:04:49)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero: "))

# Impressao do dobro do numero
print(num*2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
Digite o numero: 512
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
Digite o numero: 2468
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
Digite o numero: 11356
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
Digite o numero: 888
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
Digite o numero: 22
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 21:19:26)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("bolo de chocoate "))

# Impressao do dobro do numero
print(num*2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
bolo de chocoate 512
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
bolo de chocoate 2468
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
bolo de chocoate 11356
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
bolo de chocoate 888
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
bolo de chocoate 22
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 21:19:58)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("bolo de chocoate "))

# Impressao do dobro do numero
print(num*2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
bolo de chocoate 512
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
bolo de chocoate 2468
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
bolo de chocoate 11356
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
bolo de chocoate 888
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
bolo de chocoate 22
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 19:04:17)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero: "))

# Impressao do dobro do numero
print(num)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
Digite o numero: 256
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
Digite o numero: 1234
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
Digite o numero: 5678
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
Digite o numero: 444
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
Digite o numero: 11
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 19:02:17)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(("Digite o numero: "))

# Impressao do dobro do numero
print(num)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    num = int(("Digite o numero: "))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: 'Digite o numero: '
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    num = int(("Digite o numero: "))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: 'Digite o numero: '
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    num = int(("Digite o numero: "))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: 'Digite o numero: '
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    num = int(("Digite o numero: "))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: 'Digite o numero: '
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    num = int(("Digite o numero: "))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: 'Digite o numero: '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 19:03:17)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
  num = int(input("Digite o numero: "))

# Impressao do dobro do numero
print(num)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
File "XXXX", line 4
    num = int(input("Digite o numero: "))
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
File "XXXX", line 4
    num = int(input("Digite o numero: "))
IndentationError: unexpected indent
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
File "XXXX", line 4
    num = int(input("Digite o numero: "))
IndentationError: unexpected indent
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
File "XXXX", line 4
    num = int(input("Digite o numero: "))
IndentationError: unexpected indent
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
File "XXXX", line 4
    num = int(input("Digite o numero: "))
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 19:02:51)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
  num = int(input("Digite o numero: "))

# Impressao do dobro do numero
print(num)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
File "XXXX", line 4
    num = int(input("Digite o numero: "))
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
File "XXXX", line 4
    num = int(input("Digite o numero: "))
IndentationError: unexpected indent
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
File "XXXX", line 4
    num = int(input("Digite o numero: "))
IndentationError: unexpected indent
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
File "XXXX", line 4
    num = int(input("Digite o numero: "))
IndentationError: unexpected indent
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
File "XXXX", line 4
    num = int(input("Digite o numero: "))
IndentationError: unexpected indent
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 19:05:16)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("bolo de chocoate "))

# Impressao do dobro do numero
print(num*2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
bolo de chocoate 512
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
bolo de chocoate 2468
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
bolo de chocoate 11356
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
bolo de chocoate 888
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
bolo de chocoate 22
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 21:20:11)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("bolo de chocoate "))

# Impressao do dobro do numero
print(num*2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
bolo de chocoate 512
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
bolo de chocoate 2468
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
bolo de chocoate 11356
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
bolo de chocoate 888
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
bolo de chocoate 22
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 19:04:45)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero: "))

# Impressao do dobro do numero
print(num*2)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
Digite o numero: 512
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
Digite o numero: 2468
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
Digite o numero: 11356
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
Digite o numero: 888
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
Digite o numero: 22
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 21:20:09)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("bolo de chocoate "))

# Impressao do dobro do numero
print(num*2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
bolo de chocoate 512
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
bolo de chocoate 2468
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
bolo de chocoate 11356
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
bolo de chocoate 888
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
bolo de chocoate 22
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 21:20:12)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("bolo de chocoate "))

# Impressao do dobro do numero
print(num*2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
bolo de chocoate 512
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
bolo de chocoate 2468
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
bolo de chocoate 11356
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
bolo de chocoate 888
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
bolo de chocoate 22
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 19:04:07)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero: "))

# Impressao do dobro do numero
print(num)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
Digite o numero: 256
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
Digite o numero: 1234
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
Digite o numero: 5678
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
Digite o numero: 444
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
Digite o numero: 11
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
